# geogent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/: .release-please-manifest.json  release-please-config.json
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  release-please.yml  release.yml  secret-scan.yml
apps/agent/: .env.example  Dockerfile  README.md  langgraph.json  pyproject.toml
apps/agent/src/geogent_agent/: __init__.py  classic_graph.py  config.py  graph.py  state.py
apps/agent/src/geogent_agent/agents/: __init__.py  classic_langchain.py
apps/agent/src/geogent_agent/graphs/: geo_analyst.py
apps/agent/src/geogent_agent/memory/: __init__.py
apps/agent/src/geogent_agent/models/: __init__.py  chat.py
apps/agent/src/geogent_agent/nodes/: agent_node.py
apps/agent/src/geogent_agent/prompts/: __init__.py  system.py
apps/agent/src/geogent_agent/tools/: __init__.py  backend_client.py  geo_tools.py  osm_tools.py
apps/agent/tests/: test_classic_agent_build.py  test_graph_build.py
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/src/geogent_backend/: __init__.py  config.py  main.py
apps/backend/src/geogent_backend/api/: deps.py
apps/backend/src/geogent_backend/api/v1/: router.py
apps/backend/src/geogent_backend/api/v1/routes/: analytics.py  features.py  health.py
apps/backend/src/geogent_backend/core/: errors.py  logging.py
apps/backend/src/geogent_backend/db/: session.py
apps/backend/src/geogent_backend/geo/: operations.py
apps/backend/src/geogent_backend/models/: __init__.py  feature.py
apps/backend/src/geogent_backend/repositories/: feature_repo.py
apps/backend/src/geogent_backend/schemas/: feature.py
apps/backend/src/geogent_backend/services/: feature_service.py
apps/backend/tests/: conftest.py
apps/backend/tests/api/: test_health.py
apps/ui/: .env.local.example  .prettierignore  Dockerfile  README.md  package.json  tailwind.config.ts
apps/ui/src/app/: globals.css  layout.tsx  page.tsx
apps/ui/src/components/copilot/: CopilotSidebar.tsx  actions.ts
apps/ui/src/types/: index.d.ts
scripts/db/: init-postgis.sql
scripts/dev/: bootstrap.sh
(+2 files in other folders)
