[project]
name = "geogent-agent"
version = "0.1.0"
description = "LangGraph agent for geospatial analytics and insights."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2.60",
  "langgraph-cli[inmem]>=0.1.70",
  "langchain>=0.3.7",
  "langchain-classic>=1.0",
  "langchain-core>=0.3.21",
  "langchain-anthropic>=0.3.0",
  "langchain-openai>=0.2.8",
  "langchain-aws>=0.2.0",
  "langchain-community>=0.3.7",
  "boto3>=1.34",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "copilotkit>=0.1.37",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geogent_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "TID"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
